# cookworm

./: README.md  bookworm_wordlist_editor.pyw  config_io.py  cookworm.py  cookworm_gui.pyw  gui_heavy_ops.py  info.py  mise.toml  pyinstaller_build.sh  pyproject.toml  theme.py
.github/workflows/: python-publish.yml
src/: cookworm_gui_wrapper.pyw
src/cookworm/: __init__.py  __main__.py  config_io.py  gui.py  gui_heavy_ops.py  info.py  theme.py  utils.py
