[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cookworm"]


[project]
name = "cookworm"
version = "4.0.1"
keywords = ["puzzles", "app", "games", "BookWorm", "mod", "modding", "editor"]
authors = [
  { name="Wilbur Jaywright", email="zargulthewizard@outlook.com" },
]
description = "The BookWorm Deluxe wordlist and popdefs editor"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
  "nltk",
  "pyyaml",
  "wordfreq",
  ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/thelabcat/cookworm"
Issues = "https://github.com/thelabcat/cookworm/issues"

[project.gui-scripts]
cookworm = "cookworm.__main__:main"
